--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">ISCOL 2017</a>
         </div>
       </div>
     </nav>
@@ -44,9 +44,12 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <h1>ISCOL 2017</h1>
+        <p>The annual meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, will be held on
+            Monday, September 25, 2017 at the The Brindell and Milton Gottlieb Auditorium,
+            School of Computer Science and Engineering, Hebrew University of Jerusalem.</p>
+        <p><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link"
+              role="button">Registration form &raquo;</a></p>
       </div>
     </div>
 
@@ -73,7 +76,6 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2015</p>
       </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
