Banners and map, more information

--- a/index.html
+++ b/index.html
@@ -3,95 +3,135 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>ISCOL 2017</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-        </style>
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <style>
+        body {
+            padding-top: 50px;
+            padding-bottom: 20px;
+        }
+    </style>
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/main.css">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+</head>
+<body>
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">ISCOL 2017</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">ISCOL 2017</a>
         </div>
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>ISCOL 2017</h1>
-        <p>The annual meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, will be held on
-            Monday, September 25, 2017 at the The Brindell and Milton Gottlieb Auditorium,
-            School of Computer Science and Engineering, Hebrew University of Jerusalem.</p>
-        <p><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link"
-              role="button">Registration form &raquo;</a></p>
-      </div>
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9">
+                <h1>The 2017 Israel Seminar of Computational Linguistics</h1>
+            </div>
+            <div class="col-md-3">
+                <img src="img/huji_banner.png" class="img-responsive">
+                <img src="img/cse_banner.png" class="img-responsive">
+            </div>
+        </div>
+        <div class="row">
+            <p>The annual meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, will be held on
+                Monday, September 25, 2017 at the Hebrew University of Jerusalem.</p>
+            <p>Participation is free, but registration is required:
+                <a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link"
+                   role="button">Registration form &raquo;</a></p>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Time and Location</h2>
+            <p>Monday, September 25, 2017</p>
+            <p>The Brindell and Milton Gottlieb Auditorium,<br>
+                The Rothberg Family buildings,<br>
+                Rachel and Selim Benin School of Computer Science and Engineering,<br>
+                Edmond J. Safra Campus, Jerusalem</p>
+            <p><a class="btn btn-default" href="img/map.jpg" role="button">Campus map &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Call for Papers</h2>
+            <p>We invite presentations on recent work in all areas of computational linguistics,
+                natural language processing and all closely related fields.
+                We accept work underway, provided that it represents recent and original work of interest to our audience.
+                Presentations of work pertaining to Hebrew or Arabic are especially encouraged.</p>
+            <p>Please submit extended abstracts (up to 2 pages, including references)
+                through the EasyChair submission and review system, until <b>August 15, 2017</b>.</p>
+            <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=iscol2017" role="button">Submission form &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Program and Organization Committee</h2>
+            <ul>
+                <li>Omri Abend, The Hebrew University of Jerusalem</li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Program</h2>
+            <p>To be announced.</p>
+        </div>
+        <div class="col-md-4">
+            <h2>Sponsors</h2>
+            <p>To be announced.</p>
+        </div>
+        <div class="col-md-4">
+            <h2>Past Conferences</h2>
+            <ul>
+                <li><a href="https://tce.technion.ac.il/events/iscol-2016">2016</a></li>
+                <li><a href="http://www.openu.ac.il/iscol2015">2015</a></li>
+                <li><a href="http://cl.haifa.ac.il/iscol14">2014</a></li>
+                <li><a href="http://www.cs.bgu.ac.il/~cohenrap/iscol2013">2013</a></li>
+                <li><a href="http://www.cs.bgu.ac.il/~adlerm/iscol11">2011</a></li>
+                <li><a href="http://www.cs.tau.ac.il/~nachum/iscol10">2010</a></li>
+            </ul>
+        </div>
     </div>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
+    <hr>
 
-      <hr>
+    <footer>
+    </footer>
+</div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-      <footer>
-      </footer>
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+<script src="js/vendor/bootstrap.min.js"></script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 
-        <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<script>
+    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+        e.src='//www.google-analytics.com/analytics.js';
+        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+</script>
+</body>
 </html>
