--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </style>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto">
 
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
@@ -56,16 +57,16 @@
         <div class="row">
             <p>The annual meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, will be held on
                 Monday, September 25, 2017 at the Hebrew University of Jerusalem.</p>
-            <p>Participation is free, but registration is required:
-                <a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link"
-                   role="button">Registration form &raquo;</a></p>
+            <p>Participation is free, but registration is required.</p>
+            <p><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link"
+                  role="button">Registration form &raquo;</a></p>
         </div>
     </div>
 </div>
 
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-5">
             <h2>Time and Location</h2>
             <p>Monday, September 25, 2017</p>
             <p>The Brindell and Milton Gottlieb Auditorium,<br>
@@ -74,7 +75,7 @@
                 Edmond J. Safra Campus, Jerusalem</p>
             <p><a class="btn btn-default" href="img/map.jpg" role="button">Campus map &raquo;</a></p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5">
             <h2>Call for Papers</h2>
             <p>We invite presentations on recent work in all areas of computational linguistics,
                 natural language processing and all closely related fields.
@@ -84,23 +85,7 @@
                 through the EasyChair submission and review system, until <b>August 15, 2017</b>.</p>
             <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=iscol2017" role="button">Submission form &raquo;</a></p>
         </div>
-        <div class="col-md-4">
-            <h2>Program and Organization Committee</h2>
-            <ul>
-                <li>Omri Abend, The Hebrew University of Jerusalem</li>
-            </ul>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4">
-            <h2>Program</h2>
-            <p>To be announced.</p>
-        </div>
-        <div class="col-md-4">
-            <h2>Sponsors</h2>
-            <p>To be announced.</p>
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-2">
             <h2>Past Conferences</h2>
             <ul>
                 <li><a href="https://tce.technion.ac.il/events/iscol-2016">2016</a></li>
@@ -109,6 +94,22 @@
                 <li><a href="http://www.cs.bgu.ac.il/~cohenrap/iscol2013">2013</a></li>
                 <li><a href="http://www.cs.bgu.ac.il/~adlerm/iscol11">2011</a></li>
                 <li><a href="http://www.cs.tau.ac.il/~nachum/iscol10">2010</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <h2>Program</h2>
+            <p>To be announced.</p>
+        </div>
+        <div class="col-md-3">
+            <h2>Sponsors</h2>
+            <p>To be announced.</p>
+        </div>
+        <div class="col-md-6">
+            <h2>Program and Organization Committee</h2>
+            <ul>
+                <li>Omri Abend, The Hebrew University of Jerusalem</li>
             </ul>
         </div>
     </div>
