--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="row">
             <p>The annual meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, will be held on
-                Monday, September 25, 2017 at the Hebrew University of Jerusalem.</p>
+                Monday, September ??, 2017 at the Hebrew University of Jerusalem.</p>
             <p>Participation is free, but registration is required.</p>
             <p><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link"
                   role="button">Registration form &raquo;</a></p>
@@ -68,7 +68,7 @@
     <div class="row">
         <div class="col-md-5">
             <h2>Time and Location</h2>
-            <p>Monday, September 25, 2017</p>
+            <p>Monday, September ??, 2017</p>
             <p>The Brindell and Milton Gottlieb Auditorium,<br>
                 The Rothberg Family buildings,<br>
                 Rachel and Selim Benin School of Computer Science and Engineering,<br>
@@ -82,7 +82,7 @@
                 We accept work underway, provided that it represents recent and original work of interest to our audience.
                 Presentations of work pertaining to Hebrew or Arabic are especially encouraged.</p>
             <p>Please submit extended abstracts (up to 2 pages, including references)
-                through the EasyChair submission and review system, until <b>August 15, 2017</b>.</p>
+                through the EasyChair submission and review system, until <b>??, 2017</b>.</p>
             <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=iscol2017" role="button">Submission form &raquo;</a></p>
         </div>
         <div class="col-md-2">
