--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="row">
             <p>The annual meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, will be held on
-                Monday, September ??, 2017 at the Hebrew University of Jerusalem.</p>
+                Monday, September 25, 2017 at the Hebrew University of Jerusalem.</p>
             <p>Participation is free, but registration is required.</p>
             <p><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link"
                   role="button">Registration form &raquo;</a></p>
@@ -68,11 +68,12 @@
     <div class="row">
         <div class="col-md-5">
             <h2>Time and Location</h2>
-            <p>Monday, September ??, 2017</p>
-            <p>The Brindell and Milton Gottlieb Auditorium,<br>
-                The Rothberg Family buildings,<br>
+            <p>Monday, September 25, 2017</p>
+            <p>The Brindell and Milton Gottlieb Auditorium (<b>A300</b>),<br>
+                The <b>Rothberg</b> Family buildings,<br>
                 Rachel and Selim Benin School of Computer Science and Engineering,<br>
                 Edmond J. Safra Campus, Jerusalem</p>
+            <p>The poster session will be held in floor 1 of the same building.</p>
             <p><a class="btn btn-default" href="img/map.jpg" role="button">Campus map &raquo;</a></p>
         </div>
         <div class="col-md-5">
@@ -82,7 +83,7 @@
                 We accept work underway, provided that it represents recent and original work of interest to our audience.
                 Presentations of work pertaining to Hebrew or Arabic are especially encouraged.</p>
             <p>Please submit extended abstracts (up to 2 pages, including references)
-                through the EasyChair submission and review system, until <b>??, 2017</b>.</p>
+                through the EasyChair submission and review system, until <b>August 17, 2017</b>.</p>
             <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=iscol2017" role="button">Submission form &raquo;</a></p>
         </div>
         <div class="col-md-2">
@@ -98,19 +99,22 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2">
             <h2>Program</h2>
             <p>To be announced.</p>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
             <h2>Sponsors</h2>
             <p>To be announced.</p>
         </div>
-        <div class="col-md-6">
-            <h2>Program and Organization Committee</h2>
-            <ul>
-                <li>Omri Abend, The Hebrew University of Jerusalem</li>
-            </ul>
+        <div class="col-md-4">
+            <h2>Organization Committee</h2>
+            Omri Abend, Daniel Hershcovich and Elior Sulem,<br>
+            The Hebrew University of Jerusalem
+        </div>
+        <div class="col-md-4">
+            <h2>Program Committee</h2>
+            Omri Abend, The Hebrew University of Jerusalem
         </div>
     </div>
 
