--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             </button>
             <a class="navbar-brand" href="#">ISCOL 2017</a>
         </div>
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="nav navbar-nav">
+            <li><a href="#program">Program</a></li>
+          </ul>
+        </div>
     </div>
 </nav>
 
@@ -99,7 +104,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-2" id="program">
             <h2>Program</h2>
             <p>To be announced.</p>
         </div>
