Add Jonathan Berant

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
         </div>
         <div class="col-md-4">
             <h2>Program Committee</h2>
-            Omri Abend, The Hebrew University of Jerusalem
+            Omri Abend, The Hebrew University of Jerusalem,<br>
+            Jonathan Berant, Tel-Aviv University
         </div>
     </div>
 
