--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
         <div class="col-md-4">
             <h2>Organization Committee</h2>
-            Omri Abend, Daniel Hershcovich and Elior Sulem,<br>
+            Omri Abend, Daniel Hershcovich, Elior Sulem and Leshem Choshen,<br>
             The Hebrew University of Jerusalem
         </div>
         <div class="col-md-4">
