--- a/index.html
+++ b/index.html
@@ -81,26 +81,12 @@
             <p>The poster session will be held in floor 1 of the same building.</p>
             <p><a class="btn btn-default" href="img/map.jpg" role="button">Campus map &raquo;</a></p>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-7">
             <h2>Call for Papers</h2>
-            <p>We invite presentations on recent work in all areas of computational linguistics,
-                natural language processing and all closely related fields.
-                We accept work underway, provided that it represents recent and original work of interest to our audience.
-                Presentations of work pertaining to Hebrew or Arabic are especially encouraged.</p>
-            <p>Please submit extended abstracts (up to 2 pages, including references)
-                through the EasyChair submission and review system, until <b>August 17, 2017</b>.</p>
+            <p>We invite presentations on recent work in all areas of computational linguistics, natural language processing and closely related fields. We accept work underway, provided that it represents recent and original work of interest to our audience.</p>
+            <p>Please submit your extended abstracts (up to 2 pages, including references) through EasyChair:</p>
             <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=iscol2017" role="button">Submission form &raquo;</a></p>
-        </div>
-        <div class="col-md-2">
-            <h2>Past Conferences</h2>
-            <ul>
-                <li><a href="https://tce.technion.ac.il/events/iscol-2016">2016</a></li>
-                <li><a href="http://www.openu.ac.il/iscol2015">2015</a></li>
-                <li><a href="http://cl.haifa.ac.il/iscol14">2014</a></li>
-                <li><a href="http://www.cs.bgu.ac.il/~cohenrap/iscol2013">2013</a></li>
-                <li><a href="http://www.cs.bgu.ac.il/~adlerm/iscol11">2011</a></li>
-                <li><a href="http://www.cs.tau.ac.il/~nachum/iscol10">2010</a></li>
-            </ul>
+            <p>The submission deadline is <b>August 17, 2017</b>. Notifications of paper acceptance and format of presentation (oral/poster) will be sent by August 25, 2017.</p>
         </div>
     </div>
     <div class="row">
@@ -112,15 +98,28 @@
             <h2>Sponsors</h2>
             <p>To be announced.</p>
         </div>
-        <div class="col-md-4">
-            <h2>Organization Committee</h2>
-            Omri Abend, Daniel Hershcovich, Elior Sulem and Leshem Choshen,<br>
-            The Hebrew University of Jerusalem
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
             <h2>Program Committee</h2>
-            Omri Abend, The Hebrew University of Jerusalem,<br>
-            Jonathan Berant, Tel-Aviv University
+            Omri Abend, HUJI<br>
+            Jonathan Berant, TAU
+        </div>
+        <div class="col-md-3">
+            <h2>Organization Committee</h2>
+            Omri Abend, HUJI<br>
+            Daniel Hershcovich, HUJI<br>
+            Elior Sulem, HUJI<br>
+            Leshem Choshen, HUJI
+        </div>
+        <div class="col-md-2">
+            <h2>Past Conferences</h2>
+            <ul>
+                <li><a href="https://tce.technion.ac.il/events/iscol-2016">2016</a></li>
+                <li><a href="http://www.openu.ac.il/iscol2015">2015</a></li>
+                <li><a href="http://cl.haifa.ac.il/iscol14">2014</a></li>
+                <li><a href="http://www.cs.bgu.ac.il/~cohenrap/iscol2013">2013</a></li>
+                <li><a href="http://www.cs.bgu.ac.il/~adlerm/iscol11">2011</a></li>
+                <li><a href="http://www.cs.tau.ac.il/~nachum/iscol10">2010</a></li>
+            </ul>
         </div>
     </div>
 
