--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <a class="navbar-brand" href="#">ISCOL 2017</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar">
-          <ul class="nav navbar-nav">
-            <li><a href="#program">Program</a></li>
-          </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="#program">Program</a></li>
+            </ul>
         </div>
     </div>
 </nav>
@@ -60,8 +60,9 @@
             </div>
         </div>
         <div class="row">
-            <p>The annual meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, will be held on
-                Monday, September 25, 2017 at the Hebrew University of Jerusalem.</p>
+            <p>The Annual Meeting of the Israeli Seminar on Computational Linguistics, ISCOL 2017, will be held on
+                Monday, September 25, in the Computer Science Department of the Hebrew
+                University of Jerusalem, the Edmond J. Safra Campus in Givat Ram.</p>
             <p>Participation is free, but registration is required.</p>
             <p><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link"
                   role="button">Registration form &raquo;</a></p>
@@ -70,8 +71,15 @@
 </div>
 
 <div class="container">
+    <p>Computational Linguistics and Natural Language Processing are active
+        research and development fields in Israel today, both in academia and
+        industry. ISCOL is a venue for exchanging ideas, reporting on work in
+        progress and established results, forming collaborations, and
+        advancing connections between academia and industry. ISCOL is also a
+        friendly stage for students for their first appearance in this
+        community.</p>
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-4">
             <h2>Time and Location</h2>
             <p>Monday, September 25, 2017</p>
             <p>The Brindell and Milton Gottlieb Auditorium (<b>A300</b>),<br>
@@ -81,12 +89,25 @@
             <p>The poster session will be held in floor 1 of the same building.</p>
             <p><a class="btn btn-default" href="img/map.jpg" role="button">Campus map &raquo;</a></p>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-5">
             <h2>Call for Papers</h2>
-            <p>We invite presentations on recent work in all areas of computational linguistics, natural language processing and closely related fields. We accept work underway, provided that it represents recent and original work of interest to our audience.</p>
-            <p>Please submit your extended abstracts (up to 2 pages, including references) through EasyChair:</p>
+            <p>We invite presentations on recent work in all areas of computational
+                linguistics, natural language processing and closely related fields.
+                We accept work underway, provided that it represents recent and
+                original work of interest to our audience.</p>
+            <p>Please submit your extended abstracts (up to 2 pages, including
+                references) through EasyChair:</p>
             <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=iscol2017" role="button">Submission form &raquo;</a></p>
-            <p>The submission deadline is <b>August 17, 2017</b>. Notifications of paper acceptance and format of presentation (oral/poster) will be sent by August 25, 2017.</p>
+            <p>The submission deadline is <b>August 17, 2017</b>. Notifications of paper
+                acceptance and format of presentation (oral/poster) will be sent by
+                August 25, 2017.</p>
+            <p>We are looking forward to welcoming you in Jerusalem!</p>
+        </div>
+        <div class="col-md-3">
+            <h2>Important dates</h2>
+            <p>Submission deadline: August 17<br>
+                Notification: August 25<br>
+                ISCOL: September 25</p>
         </div>
     </div>
     <div class="row">
