Note about cross-submissions

--- a/index.html
+++ b/index.html
@@ -97,10 +97,15 @@
                 original work of interest to our audience.</p>
             <p>Please submit your extended abstracts (up to 2 pages, including
                 references) through EasyChair:</p>
-            <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=iscol2017" role="button">Submission form &raquo;</a></p>
+            <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=iscol2017" role="button">
+                Submission form &raquo;</a></p>
             <p>The submission deadline is <b>August 17, 2017</b>. Notifications of paper
                 acceptance and format of presentation (oral/poster) will be sent by
                 August 25, 2017.</p>
+            <p><b>Note:</b> You may submit work that was published elsewhere.
+                As there are no formal proceedings to ISCOL, submissions are not taken into account with
+                respect to publication in other venues.
+            </p>
             <p>We are looking forward to welcoming you in Jerusalem!</p>
         </div>
         <div class="col-md-3">
