--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
         </div>
         <div class="col-md-2">
             <h2>Sponsors</h2>
-            <p>To be announced.</p>
+            <img src="img/google_logo.png" class="img-responsive">
+            <img src="img/ibmresearch_logo.png" class="img-responsive">
+            <img src="img/icrici_logo.png" class="img-responsive">
         </div>
         <div class="col-md-3">
             <h2>Program Committee</h2>
