--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <p>The poster session will be held in floor 1 of the same building.</p>
             <p><a class="btn btn-default" href="img/map.jpg" role="button">Campus map &raquo;</a></p>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-8">
             <h2>Call for Papers</h2>
             <p>We invite presentations on recent work in all areas of computational
                 linguistics, natural language processing and closely related fields.
@@ -108,23 +108,17 @@
             </p>
             <p>We are looking forward to welcoming you in Jerusalem!</p>
         </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3" id="program">
+            <h2>Program</h2>
+            <p>To be announced.</p>
+        </div>
         <div class="col-md-3">
             <h2>Important dates</h2>
             <p>Submission deadline: August 17<br>
                 Notification: August 25<br>
                 ISCOL: September 25</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-2" id="program">
-            <h2>Program</h2>
-            <p>To be announced.</p>
-        </div>
-        <div class="col-md-2">
-            <h2>Sponsors</h2>
-            <img src="img/google_logo.png" class="img-responsive">
-            <img src="img/ibmresearch_logo.png" class="img-responsive">
-            <img src="img/icrici_logo.png" class="img-responsive">
         </div>
         <div class="col-md-3">
             <h2>Program Committee</h2>
@@ -137,6 +131,23 @@
             Daniel Hershcovich, HUJI<br>
             Elior Sulem, HUJI<br>
             Leshem Choshen, HUJI
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <h2>Sponsors</h2>
+            <img src="img/google_logo.png" class="img-responsive">
+            <br>
+            <img src="img/ibmresearch_logo.png" class="img-responsive">
+            <br>
+            <img src="img/icrici_logo.png" class="img-responsive">
+        </div>
+        <div class="col-md-4">
+            <br><br><br>
+            We also acknolwedge the support of the Edmond and Lily Safra Center for Brain Sciences.
+            <img src="img/elsc_logo.png" class="img-responsive">
+        </div>
+        <div class="col-md-3">
         </div>
         <div class="col-md-2">
             <h2>Past Conferences</h2>
