Reorganize, preparing for program

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -64,8 +64,8 @@
                 Monday, September 25, in the Computer Science Department of the Hebrew
                 University of Jerusalem, the Edmond J. Safra Campus in Givat Ram.</p>
             <p>Participation is free, but registration is required.</p>
-            <p><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link"
-                  role="button">Registration form &raquo;</a></p>
+            <p><a class="btn btn-primary btn-lg" href="https://docs.google.com/forms/d/e/1FAIpQLScKIC2znQf3Uoz9LgMyTurIZiXChsYlTVvK0HmcqbdVHPVUAw/viewform?usp=sf_link">
+                Registration form &raquo;</a></p>
         </div>
     </div>
 </div>
@@ -79,7 +79,13 @@
         friendly stage for students for their first appearance in this
         community.</p>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3" id="program">
+            <h2>Program</h2>
+            <p>To be announced.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
             <h2>Time and Location</h2>
             <p>Monday, September 25, 2017</p>
             <p>The Brindell and Milton Gottlieb Auditorium (<b>A300</b>),<br>
@@ -87,38 +93,7 @@
                 Rachel and Selim Benin School of Computer Science and Engineering,<br>
                 Edmond J. Safra Campus, Jerusalem</p>
             <p>The poster session will be held in floor 1 of the same building.</p>
-            <p><a class="btn btn-default" href="img/map.jpg" role="button">Campus map &raquo;</a></p>
-        </div>
-        <div class="col-md-8">
-            <h2>Call for Papers</h2>
-            <p>We invite presentations on recent work in all areas of computational
-                linguistics, natural language processing and closely related fields.
-                We accept work underway, provided that it represents recent and
-                original work of interest to our audience.</p>
-            <p>Please submit your extended abstracts (up to 2 pages, including
-                references) through EasyChair:</p>
-            <p><a class="btn btn-default" href="https://easychair.org/conferences/?conf=iscol2017" role="button">
-                Submission form &raquo;</a></p>
-            <p>The submission deadline is <b>August 17, 2017</b>. Notifications of paper
-                acceptance and format of presentation (oral/poster) will be sent by
-                August 25, 2017.</p>
-            <p><b>Note:</b> You may submit work that was published elsewhere.
-                As there are no formal proceedings to ISCOL, submissions are not taken into account with
-                respect to publication in other venues.
-            </p>
-            <p>We are looking forward to welcoming you in Jerusalem!</p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-3" id="program">
-            <h2>Program</h2>
-            <p>To be announced.</p>
-        </div>
-        <div class="col-md-3">
-            <h2>Important dates</h2>
-            <p>Submission deadline: August 17<br>
-                Notification: August 25<br>
-                ISCOL: September 25</p>
+            <p><a class="btn btn-default" href="img/map.jpg">Campus map &raquo;</a></p>
         </div>
         <div class="col-md-3">
             <h2>Program Committee</h2>
@@ -148,6 +123,10 @@
             <img src="img/elsc_logo.png" class="img-responsive">
         </div>
         <div class="col-md-3">
+            <h2>Important dates</h2>
+            <p><del>Submission deadline: August 17</del><br>
+                <del>Notification: August 25</del><br>
+                <b>ISCOL: September 25</b></p>
         </div>
         <div class="col-md-2">
             <h2>Past Conferences</h2>
