--- a/index.html
+++ b/index.html
@@ -79,9 +79,64 @@
         friendly stage for students for their first appearance in this
         community.</p>
     <div class="row">
-        <div class="col-md-3" id="program">
+        <div class="col-md-12" id="program">
             <h2>Program</h2>
-            <p>To be announced.</p>
+            <h3>09:00-09:05: Opening Words</h3>
+
+            <h3>09:05-10:25: Morning Session (Oral Presentations)</h3>
+            <ul>
+               <li><b>Compositional Semantic Parsing of Instructions in Unseen Domains</b><br>Ofer Givoli and Roi Reichart</li>
+               <li><b>Neural semantic parsing over multiple knowledge-bases</b><br>Jonathan Herzig and Jonathan Berant</li>
+               <li><b>A Consolidated Open Knowledge Representation for Multiple Texts</b><br>Rachel Wities, Vered Shwartz, Gabriel Stanovsky, Meni Adler, Ori Shapira, Shyam Upadhyay, Dan Roth, Eugenio Martinez Camara, Iryna Gurevych and Ido Dagan</li>
+               <li><b>Semantically Motivated Hebrew Verb-Noun Multi-Word Expressions Identification</b><br>Chaya Liebeskind and Yaakov Hacohen-Kerner</li>
+            </ul>
+            <h3>10:25-11:00: Coffee Break</h3>
+            <h3>11:00-12:00: Invited Talk by Inbal Arnon (title: TBA)</h3>
+            <h3>12:00-14:00: Poster Session and Light Lunch (See list of posters at the bottom)</h3>
+            <h3>14:00-14:40: An Open Discussion on the future of the Mila Center</h3>
+            <h3>14:40-16:00: Afternoon Session (Oral Presentations)</h3>
+            <ul>
+               <li><b>Too many corrections: Semantic reference-less evaluation for Grammatical Error Correction</b><br>Leshem Choshen and Omri Abend</li>
+               <li><b>Integrating Deep Linguistic Features in Factuality Prediction over Unified Datasets</b><br>Gabriel Stanovsky, Judith Eckle-Kohler, Yevgeniy Puzikov, Ido Dagan and Iryna Gurevych</li>
+               <li><b>	ConStance: Modeling Annotation Contexts to Improve Stance Classification</b><br>Kenneth Josseph, Lisa Friedland, William Hobbs, David Lazer and Oren Tsur</li>
+               <li><b>Found in Translation: Reconstructing Phylogenetic Language Trees from Translations</b><br>Ella Rabinovich, Noam Ordan and Shuly Wintner</li>
+            </ul>
+            <h3>16:00-16:30: Coffee Break</h3>
+            <h3>16:30-17:30: Evening Session</h3>
+            <ul>
+                <li>Jessica Ficler and Yoav Goldberg	/ Controlling Linguistic Style Aspects in Neural Language Generation</li>
+               <li><b>	Unsupervised Query-Focused Multi-Document Summarization</b><br>Guy Feigenblat, Haggai Roitman, Odellia Boni and David Konopnicki</li>
+               <li><b>Query Focused Abstractive Summarization: Adapting Sequence-to-Sequence Models with Query Relevance</b><br>Tal Baumel, Matan Eyal and Michael Elhadad</li>
+            </ul>
+            <h3>Poster Presentations:</h3>
+            <ol>
+               <li><b>Towards String-to-Tree Neural Machine Translation</b><br>Roee Aharoni and Yoav Goldberg</li>
+               <li><b>A Transition-Based Directed Acyclic Graph Parser for Universal Conceptual Cognitive Annotation</b><br>Daniel Hershcovich, Omri Abend and Ari Rappoport</li>
+               <li><b>Interactive Abstractive Summarization for Event News Tweets</b><br>Ori Shapira, Hadar Ronen, Adler Meni, Yael Amsterdamer, Judit Bar-Ilan and Ido Dagan</li>
+               <li><b>Semantic helper for text compose /</b><br>Boris Pevzner</li>
+               <li><b>Acquiring Predicate Paraphrases from News Tweets</b><br>Vered Shwartz, Gabriel Stanovsky and Ido Dagan</li>
+               <li><b>Learning Agreement with Deep Neural Networks</b><br>Jean-Philippe Bernardy and Shalom Lappin</li>
+               <li><b>Mutual Convergence of Mutlimodal Linguistic Properties in Spoken Dialogue Systems</b><br>Eran Raveh</li>
+               <li><b>Unsupervised Event Detection in Twitter</b><br>Yuval Shachaf, Gennadi Lembersky and Roy Klein</li>
+               <li><b>Evaluating Semantic Parsing against a Simple Web-based Question Answering Model</b><br>Alon Talmor, Mor Geva and Jonathan Berant</li>
+               <li><b>Semantic Structure-Based Evaluation Metrics for Sentence Simplification</b><br>Elior Sulem, Omri Abend and Ari Rappoport</li>
+               <li><b>Recognizing Mentions of Adverse Drug Reaction in Social Media Using Knowledge-Infused Recurrent Models</b><br>Gabriel Stanovsky, Daniel Gruhl and Pablo Mendes</li>
+               <li><b>Automatic Detection of Translation Direction</b><br>Ilia Sominsky and Shuly Wintner</li>
+               <li><b>Thomson Reuters Self-Service Classification</b><br>Ehud Azikri and Hila Zarosim</li>
+               <li><b>Interactive Semantic Parsing on Semi-Structured Tables</b><br>Tomer Wolfson</li>
+               <li><b>Floating Agenda Parser</b><br>Dor Muhlgay and Jonathan Berant</li>
+               <li><b>Reinforcing Abstractive Text Summarization with Reading-Comprehension</b><br>Matan Eyal, Tal Baumel and Michael Elhadad</li>
+               <li><b>Improving Claim Stance Classification with Lexical Knowledge Expansion and Context Utilization</b><br>Roy Bar-Haim, Lilach Edelstein, Charles Jochim and Noam Slonim</li>
+               <li><b>lex2vecs: Combining dictionary knowledge and word embeddings for word sense disambiguation</b><br>Morris Alper and Noam Ordan</li>
+               <li><b>Multi-Label Classification on Patient Notes</b><br>Tal Baumel, Jumana Nassour-Kassis, Noemie Elhadad and Michael Elhadad</li>
+               <li><b>Crafting a lexicon of referential expressions for NLG applications</b><br>Ariel Gutman, Alexandros Andre Chaaraoui and Pascal Fleury</li>
+               <li><b>Where’s my head? Task definition, dataset and initial results for fused head recovery</b><br>Yanai Elazar and Yoav Goldberg</li>
+               <li><b>Contextualization and Regularization of Word Embeddings for Machine Comprehension</b><br>Shimi Salant and Jonathan Berant</li>
+               <li><b>Deep Learning for Preprocessing Historical Hebrew Texts: Error Correction, Vocalization and Abbreviation Expansion</b><br>Avi Shmidman, Shaltiel Shmidman, Moshe Koppel and Yoav Goldberg</li>
+               <li><b>Detection of Native Language Based on Micro Messages</b><br>Oren Tsur, Yohay Nahari and Maayan Matook</li>
+               <li><b>Causal factors of language change under control - the case of frequency bias in laws of semantic change</b><br>Haim Dubossarsky, Eitan Grossman and Daphna Weinshall</li>
+               <li><b>Rare word embeddings with Sub-word similarity based search: better representations without more knowledge, data, or training</b><br>Clayton Greenberg, Mittul Singh, Youssef Oualil, and Dietrich Klakow</li>
+            </ol>
         </div>
     </div>
     <div class="row">
