Link to poster list

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </ul>
             <h4>10:25-11:00: Coffee Break</h4>
             <h4>11:00-12:00: Invited Talk by Inbal Arnon (title: TBA)</h4>
-            <h4>12:00-14:00: Poster Session and Light Lunch (See list of posters at the bottom)</h4>
+            <h4>12:00-14:00: Poster Session and Light Lunch (See <a href="#posters">list of posters</a>)</h4>
             <h4>14:00-14:40: An Open Discussion on the future of the Mila Center</h4>
             <h4>14:40-16:00: Afternoon Session (Oral Presentations)</h4>
             <ul>
@@ -108,7 +108,7 @@
                 <li><b>	Unsupervised Query-Focused Multi-Document Summarization</b><br>Guy Feigenblat, Haggai Roitman, Odellia Boni and David Konopnicki</li>
                 <li><b>Query Focused Abstractive Summarization: Adapting Sequence-to-Sequence Models with Query Relevance</b><br>Tal Baumel, Matan Eyal and Michael Elhadad</li>
             </ul>
-            <h4>Poster Presentations:</h4>
+            <h4 id="posters">Poster Presentations:</h4>
             <ol>
                 <li><b>Towards String-to-Tree Neural Machine Translation</b><br>Roee Aharoni and Yoav Goldberg</li>
                 <li><b>A Transition-Based Directed Acyclic Graph Parser for Universal Conceptual Cognitive Annotation</b><br>Daniel Hershcovich, Omri Abend and Ari Rappoport</li>
