--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                 <li><b>	Unsupervised Query-Focused Multi-Document Summarization</b><br>Guy Feigenblat, Haggai Roitman, Odellia Boni and David Konopnicki</li>
                 <li><b>Query Focused Abstractive Summarization: Adapting Sequence-to-Sequence Models with Query Relevance</b><br>Tal Baumel, Matan Eyal and Michael Elhadad</li>
             </ul>
-            <h4 id="posters">Poster Presentations:</h4>
+            <div id="posters" style="height:50px"></div>
+            <h4>Poster Presentations:</h4>
             <ol>
                 <li><b>Towards String-to-Tree Neural Machine Translation</b><br>Roee Aharoni and Yoav Goldberg</li>
                 <li><b>A Transition-Based Directed Acyclic Graph Parser for Universal Conceptual Cognitive Annotation</b><br>Daniel Hershcovich, Omri Abend and Ari Rappoport</li>
@@ -167,38 +168,51 @@
                     Leshem Choshen, HUJI
                 </div>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-3">
-            <h2>Sponsors</h2>
-            <img src="img/google_logo.png" class="img-responsive">
-            <br>
-            <img src="img/ibmresearch_logo.png" class="img-responsive">
-            <br>
-            <img src="img/icrici_logo.png" class="img-responsive">
-        </div>
-        <div class="col-md-4">
-            <br><br><br>
-            We also acknolwedge the support of the Edmond and Lily Safra Center for Brain Sciences.
-            <img src="img/elsc_logo.png" class="img-responsive">
-        </div>
-        <div class="col-md-3">
-            <h2>Important dates</h2>
-            <p><del>Submission deadline: August 17</del><br>
-                <del>Notification: August 25</del><br>
-                <b>ISCOL: September 25</b></p>
-        </div>
-        <div class="col-md-2">
-            <h2>Past Conferences</h2>
-            <ul>
-                <li><a href="https://tce.technion.ac.il/events/iscol-2016">2016</a></li>
-                <li><a href="http://www.openu.ac.il/iscol2015">2015</a></li>
-                <li><a href="http://cl.haifa.ac.il/iscol14">2014</a></li>
-                <li><a href="http://www.cs.bgu.ac.il/~cohenrap/iscol2013">2013</a></li>
-                <li><a href="http://www.cs.bgu.ac.il/~adlerm/iscol11">2011</a></li>
-                <li><a href="http://www.cs.tau.ac.il/~nachum/iscol10">2010</a></li>
-            </ul>
+            <div class="row">
+                <div class="col-md-12" style="height:50px"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-10">
+                    <h2>Sponsors</h2>
+                    <img src="img/google_logo.png" class="img-responsive">
+                    <br>
+                    <img src="img/ibmresearch_logo.png" class="img-responsive">
+                    <br>
+                    <img src="img/icrici_logo.png" class="img-responsive">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-10">
+                    <br><br><br>
+                    We also acknolwedge the support of the Edmond and Lily Safra Center for Brain Sciences.
+                    <img src="img/elsc_logo.png" class="img-responsive">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-10">
+                    <h2>Important dates</h2>
+                    <p><del>Submission deadline: August 17</del><br>
+                        <del>Notification: August 25</del><br>
+                        <b>ISCOL: September 25</b></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-10">
+                    <h2>Past Conferences</h2>
+                    <ul>
+                        <li><a href="https://tce.technion.ac.il/events/iscol-2016">2016</a></li>
+                        <li><a href="http://www.openu.ac.il/iscol2015">2015</a></li>
+                        <li><a href="http://cl.haifa.ac.il/iscol14">2014</a></li>
+                        <li><a href="http://www.cs.bgu.ac.il/~cohenrap/iscol2013">2013</a></li>
+                        <li><a href="http://www.cs.bgu.ac.il/~adlerm/iscol11">2011</a></li>
+                        <li><a href="http://www.cs.tau.ac.il/~nachum/iscol10">2010</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
