Fix poster authors

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <li><b>Semantic helper for text compose</b><br>Boris Pevzner</li>
                 <li><b>Acquiring Predicate Paraphrases from News Tweets</b><br>Vered Shwartz, Gabriel Stanovsky and Ido Dagan</li>
                 <li><b>Learning Agreement with Deep Neural Networks</b><br>Jean-Philippe Bernardy and Shalom Lappin</li>
-                <li><b>Mutual Convergence of Mutlimodal Linguistic Properties in Spoken Dialogue Systems</b><br>Eran Raveh</li>
+                <li><b>Mutual Convergence of Mutlimodal Linguistic Properties in Spoken Dialogue Systems</b><br>Eran Raveh, Ingmar Steiner, Iona Gessinger and Bernd Möbius</li>
                 <li><b>Unsupervised Event Detection in Twitter</b><br>Yuval Shachaf, Gennadi Lembersky and Roy Klein</li>
                 <li><b>Evaluating Semantic Parsing against a Simple Web-based Question Answering Model</b><br>Alon Talmor, Mor Geva and Jonathan Berant</li>
                 <li><b>Semantic Structure-Based Evaluation Metrics for Sentence Simplification</b><br>Elior Sulem, Omri Abend and Ari Rappoport</li>
