--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
                     <img src="img/ibmresearch_logo.png" class="img-responsive">
                     <br>
                     <img src="img/icrici_logo.png" class="img-responsive">
+                    <br>
+                    <img src="img/yahoo_logo.png" class="img-responsive">
                 </div>
             </div>
             <div class="row">
