Mila Center link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h4>10:25-11:00: Coffee Break</h4>
             <h4>11:00-12:00: Invited Talk by Inbal Arnon (title: TBA)</h4>
             <h4>12:00-14:00: Poster Session and Light Lunch (See <a href="#posters">list of posters</a>)</h4>
-            <h4>14:00-14:40: An Open Discussion on the future of the Mila Center</h4>
+            <h4>14:00-14:40: An Open Discussion on the future of the <a href="http://www.mila.cs.technion.ac.il/heb/index.html">Mila Center</a></h4>
             <h4>14:40-16:00: Afternoon Session (Oral Presentations)</h4>
             <ul>
                 <li><b>Too many corrections: Semantic reference-less evaluation for Grammatical Error Correction</b><br>Leshem Choshen and Omri Abend</li>
